# SATA_UtilityNode

./: .gitignore  LICENSE  README.md  __init__.py  prompts.csv  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
asset/: loras.csv  models.csv  prompts.csv  resolutions.json  styles.csv
example_workflows/: IC_Light_animation.json  Img2video.json  Prompt_schedule.json  Reference-images-animation.json  SDlightning_animediff.json  Sample_Workflow.json  Text2Video.json  cacheanimation.json  workflow-evolution-final.json
js/: preview_machine.js  prompt_autocomplete.js  prompt_machine.js  resolution_machine.js  touchpad_pan_zoom.js
nodes/: combined_upscale.py  latent_machine.py  model_upscale.py  preview_machine.py  prompt_autocomplete.py  prompt_machine.py  resize_utils.py  resolution_machine.py  save_image_metadata.py  save_machine.py  upscale_machine.py
prompt/: art_style.json  artist.csv  atmosphere.csv  attire.csv  camera_angle.csv  character.csv  color_theme.csv  depth_style.csv  face.csv  fashion.csv  filter.csv  gesture.csv  lighting.csv  location.csv  nsfw_act.csv  nsfw_attire.csv  nsfw_chest.csv  nsfw_female.csv  nsfw_fetish.csv  nsfw_male.csv  nsfw_nudity.csv  nsfw_rear.csv  nsfw_scenario.json  posture.csv  quality.json  setting.csv  time_of_day.csv  trope.json
prompts/: clothing.csv  lora.csv  models.csv  prompts.csv  styles.csv
web/: prompt_machine.js  resolution_machine.js
web/js/: combined_upscale.js  touchpad_pan_zoom.js
