[project]
name = "sata_utilitynode"
description = "A collection of utility nodes including image upscale,touchpad support and CSV-driven prompt machine for ComfyUI."
version = "1.5.0"
license = {file = "LICENSE"} 

dependencies = ["opencv-python>=4.5.0", "spandrel", "piexif"]

[project.urls]
Repository = "https://github.com/SatadalAI/SATA_UtilityNode"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/SatadalAI/SATA_UtilityNode/wiki"
"Bug Tracker" = "https://github.com/SatadalAI/SATA_UtilityNode/issues"

[tool.comfy]
PublisherId = "SatadalAI"
DisplayName = "SATA_UtilityNode"
Icon = ""
